# WikiParser

./: .env.example  .gitignore  app.dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: article.py
app/core/: config.py  container.py
app/db/: __init__.py  manager.py
app/db/models/: __init__.py  article.py  base.py  mixins.py
app/repositories/: __init__.py  article.py  base.py
app/schemas/: article.py
app/services/: __init__.py  article.py  base.py  wiki_parser.py
app/tasks/: parser.py
app/utils/: ai.py
migrations/: env.py
migrations/versions/: ab72f7a7e620_article_model.py
nginx/servers/: proxy_params  site.conf
