[project]
name = "wiki-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "KamranYsupov",email = "kamrankek48@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "aiohttp (>=3.12.9,<4.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "openai (>=1.84.0,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "wiki_parser", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
